# torsten_robot

./: README.md
torsten_description/: CMakeLists.txt  package.xml
torsten_description/launch/: display_torsten_urdf.launch
torsten_description/meshes/visual/: sick_aligned.dae
torsten_description/robots/: torsten_base.urdf.xacro
torsten_description/rviz/: urdf.rviz
torsten_description/urdf/sensors/: sick_tim.urdf.xacro
torsten_description/urdf/torsten_base/: base.gazebo.xacro  base.transmission.xacro  torsten.urdf.xacro
torsten_driver/: .gitignore  CMakeLists.txt  package.xml
torsten_driver/include/torsten_driver/: CANInterface.h  CANMessage.h  CANPeakUSB.h  can_driver.cpp  can_driver.h  peak_can_usb.h  torsten_driver.cpp  torsten_driver.h
torsten_driver/include/torsten_driver/msgs/: CANMessage_CMD_VEL.h  CANMessage_ODOMETRY.h
torsten_driver/launch/: torsten_driver.launch
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/: readme.txt
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/extras/pcaninfo/src/: main.c
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/: Makefile_latest.mk  PCANBasic.h
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/examples/c++/: Makefile
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/examples/c++/src/: pcanwrite.cpp
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/examples/python/: PCANBasic.py  PCANBasicExample.pyw
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/src/: libpcanbasic.c  pcaninfo.c  pcaninfo.h  pcanlog.c  pcanlog.h  pcbcore.c  pcbcore.h  pcblog.c  pcblog.h  pcbtrace.c  pcbtrace.h  version.h
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/src/libpcanfd/: Makefile  libpcanfd.h
torsten_driver/lib/PCAN_Basic_Linux-4.1.0/pcanbasic/src/libpcanfd/src/: libpcan.c  libpcanfd.c  libprivate.h
torsten_driver/lib/peak-linux-driver-8.8.0/: Makefile
torsten_driver/lib/peak-linux-driver-8.8.0/driver/: .cache.mk  Makefile  lspcan  pcanfd.h  release_notes.txt
torsten_driver/lib/peak-linux-driver-8.8.0/driver/src/: pcan_common.c  pcan_common.h  pcan_dongle.c  pcan_dongle.h  pcan_fifo.c  pcan_fifo.h  pcan_filter.c  pcan_filter.h  pcan_fops.c  pcan_fops.h  pcan_fops_linux.c  pcan_fops_rt.c  pcan_isa.c  pcan_isa.h  pcan_main.c  pcan_main.h  pcan_main_linux.c  pcan_main_rt.c  pcan_netdev.c  pcan_netdev.h  pcan_parse.c  pcan_parse.h  pcan_pccard-2.6.16.c  pcan_pccard-2.6.17.c  pcan_pccard.c  pcan_pccard.h  pcan_pccard_core.c  pcan_pccard_core.h  pcan_pci.c  pcan_pci.h  pcan_pciec.c  pcan_pciec.h  pcan_sja1000.c  pcan_sja1000.h  pcan_timing.c  pcan_timing.h  pcan_usb.c  pcan_usb.h  pcan_usb_core.c  pcan_usb_core.h  (+11 more)
torsten_driver/lib/peak-linux-driver-8.8.0/driver/udev/: 45-pcan.rules
torsten_driver/lib/peak-linux-driver-8.8.0/lib/: Makefile  libpcanfd.h
torsten_driver/lib/peak-linux-driver-8.8.0/lib/src/: libpcan.c  libpcanfd.c  libprivate.h
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/: Makefile
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/examples/: Makefile
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/examples/c++/: Makefile  pcaneventread  pcaneventwrite  pcanread  pcanwrite
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/examples/c++/src/: pcaneventread.cpp  pcaneventwrite.cpp  pcanread.cpp  pcanwrite.cpp
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/examples/python/: .project  Makefile
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/pcanbasic/: Makefile  Makefile_latest.mk  Makefile_legacy.mk  PCANBasic.h
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/pcanbasic/src/: libpcanbasic.c  libpcanbasic_legacy.cpp  pcaninfo.c  pcaninfo.h  pcanlog.c  pcanlog.h  pcbcore.c  pcbcore.h  pcblog.c  pcblog.h  pcbtrace.c  pcbtrace.h  version.h
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/pcaninfo/: Makefile  pcaninfo  pcaninfo.1.0.2
torsten_driver/lib/peak-linux-driver-8.8.0/libpcanbasic/pcaninfo/src/: main.c  version.h
torsten_driver/lib/peak-linux-driver-8.8.0/test/: Makefile  receivetest_posix  transmitest_posix
torsten_driver/lib/peak-linux-driver-8.8.0/test/minimal_rtai/: Makefile
torsten_driver/lib/peak-linux-driver-8.8.0/test/minimal_xenomai/: Makefile
torsten_driver/lib/peak-linux-driver-8.8.0/test/src/: bitratetest.c  common.c  common.h  filtertest.cpp  pcan-settings.c  pcanfdtst.c  receivetest.c  receivetest_posix.c  receivetest_rt.c  transmitest.cpp  transmitest_posix.cpp  transmitest_rt.cpp
torsten_driver/src/: can_driver_node.cpp  torsten_driver_node.cpp
torsten_driver/srv/: boltsState.srv  setBit.srv  setBolts.srv  setSound.srv
torsten_msgs/: CMakeLists.txt  package.xml
torsten_msgs/msg/: TorstenState.msg
torsten_navigation/: CMakeLists.txt  package.xml
torsten_navigation/amcl_config/: amcl.yaml
torsten_navigation/launch/: torsten_navigation.launch
torsten_navigation/move_base_config/: costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
torsten_robot/: CMakeLists.txt  package.xml
torsten_simulation/torsten_gazebo_control/: CMakeLists.txt  package.xml
torsten_simulation/torsten_gazebo_control/launch/: joint_state_controller.launch
torsten_simulation/torsten_gazebo_robot/: CMakeLists.txt  package.xml
torsten_simulation/torsten_gazebo_robot/launch/: .torsten_base.launch.swp  torsten_base.launch  torsten_base_sim.launch
torsten_simulation/torsten_gazebo_robot/launch/maps/: sim_map.yaml
torsten_simulation/torsten_gazebo_robot/rviz/: torsten_sim.rviz
torsten_simulation/torsten_gazebo_world/: CMakeLists.txt  package.xml
torsten_simulation/torsten_gazebo_world/launch/: sim_map.launch
torsten_simulation/torsten_gazebo_world/models/sim_map/: sim_map.stl
torsten_simulation/torsten_gazebo_world/urdf/: sim_map.urdf
