<?xml version="1.0"?>
<package>
  <name>torsten_description</name>
  <version>1.0.0</version>
  <description>The torsten_description package</description>

  <maintainer email="christoph.henke@ima-ifu.rwth-aachen.de">Christoph Henke</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>urdf</run_depend>


  <export>
  </export>
</package>
