<?xml version="1.0"?>
<package format="2">
  <name>torsten_msgs</name>
  <version>1.0.0</version>
  <description>The torsten msgs package</description>

  <maintainer email="christoph.henke@ima-ifu.rwth-aachen.de">Christoph Henke</maintainer>

  <license>BSD</license>

  <author email="christoph.henke@ima-ifu.rwth-aachen.de">Christoph Henke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
