<?xml version="1.0"?>
<package format="2">
  <name>torsten_robot</name>
  <version>1.0.4</version>
  <description>
    The package contains the TORsten ROS integration.
  </description>

  <maintainer email="christoph.henke@ifu.rwth-aachen.de">Christoph Henke</maintainer>
  <author email="christoph.henke@ifu.rwth-aachen.de">Christoph Henke</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>torsten_description</exec_depend>
  <exec_depend>torsten_driver</exec_depend>
  <exec_depend>torsten_msgs</exec_depend>
  <exec_depend>torsten_navigation</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
